tests/tests/errors/2006-29.vb
'#compiler-options:/win32resource:
'#compiler-message:Command line error BC2006 : option 'win32resource' requires ':<file>'
'#exit-code:1